<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:src="@drawable/layoutheader"
        android:scaleType="fitXY"
        android:id="@+id/header"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:fontFamily="@font/climate_crisis_regular"
        android:text="@string/login"
        android:textSize="42sp"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:fontFamily="@font/baloo_2"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/baseline_vpn_key_24"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:fontFamily="@font/baloo_2"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/baloo_2"
            android:text="@string/login"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/green" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>