<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:src="@drawable/layoutheader"
        android:scaleType="fitXY"
        android:id="@+id/header"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/logoutBtn"
        android:layout_marginTop="30dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logout"
        app:tint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/logoutBtn"
        app:layout_constraintEnd_toEndOf="@id/logoutBtn"
        app:layout_constraintBottom_toBottomOf="@id/header"
        android:layout_width="220dp"
        android:layout_height="170dp"
        android:src="@drawable/logokap"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="20dp">

<!--        <ImageView-->
<!--            app:layout_constraintTop_toBottomOf="@id/logoutBtn"-->
<!--            app:layout_constraintEnd_toEndOf="@id/logoutBtn"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/header"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="170dp"-->
<!--            android:src="@drawable/brgylogo"-->
<!--            android:contentDescription="@string/app_name"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/climate_crisis_regular"
            android:text="@string/welcome"
            android:textSize="42sp"
            android:textColor="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/climate_crisis_regular"
            android:text="to"
            android:textSize="32sp"
            android:textColor="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/climate_crisis_regular"
            android:text="@string/barangay_id_system"
            android:textSize="25sp"
            android:textColor="@color/green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartedBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/baloo_2"
            android:text="Get Started"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/green" />

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>